.circleci/k8s/07-ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: note-app-ingress-service
  namespace: note-app
  annotations:
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: notes.royalboe.live
      http:
        paths:
        - pathType: Prefix
          path: "/?(.*)"
          backend:
            service:
              name: client-cluster-ip-service
              port: 
                number: 8080
        -  pathType: Prefix
           path: "/api/?(.*)"
           backend:
             service:
              name: api-cluster-ip-service
              port:
                number: 3000
